client/src/components/Posts/Post/Post.module.css
.primaryPostContainer {
  background-color: var(--color-gray-100);
  padding: 1rem;
  box-shadow: 0 3px 6px -5px var(--color-gray-700);
}

.viewMoreCommentsBtn {
  padding: 0.5rem 0;
  margin-bottom: 0.3rem;
  border: none;
  background-color: transparent;
  color: var(--color-gray-500);
  font-size: 0.9rem;
  font-weight: 700;
}

.contentHeader {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin-bottom: 1rem;
}

.contentDetails {
  flex: 1;
  align-self: center;
}

.contentDetails > p {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  font-size: 1rem;
}

.contentDetails > p:first-child {
  column-gap: 0.4rem;
  color: var(--color-gray-400);
}

.contentDetails > p:first-child > svg {
  width: 6px;
}

.contentDetails a {
  color: var(--color-gray-700);
}

.contentDetails a:hover {
  color: var(--color-gray-700);
  text-decoration: underline;
}

.contentDetails > p:last-child {
  gap: 0.2rem;
  font-size: 0.8rem;
  color: var(--color-gray-400);
}

.dropdown {
  position: relative;
  display: block;
}

.dropBtn {
  position: relative;
  width: 35px;
  height: 35px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  border: none;
  font-size: 1.5rem;
  color: var(--color-gray-400);
  background-color: unset;
}

.dropBtn:hover {
  background-color: var(--color-gray-200);
}

.dropdownContent {
  display: none;
  position: absolute;
  right: 0;
  top: 80%;
  z-index: 1;
  background-color: var(--color-gray-100);
  width: calc(100vw - 2rem);
  padding: 0.6rem;
  box-shadow: 0 0 5px -1px rgba(0, 0, 0, 0.5);
  border-radius: 10px;
}

.dropdownContent > button {
  display: flex;
  align-items: center;
  gap: 0.8rem;
  width: 100%;
  background-color: unset;
  border: none;
  border-radius: 5px;
  text-align: left;
  font-size: 1rem;
  font-weight: 300;
  padding: 0.5rem;
  color: var(--color-gray-700);
}

.dropdownContent > button:hover {
  background-color: var(--color-gray-200);
}

.dropdownContent > button > svg {
  font-size: 1.5rem;
}

.show {
  display: block;
}

.contentBody {
  margin-bottom: 0.5rem;
  white-space: pre-wrap;
  color: var(--color-gray-700);
}

.contentBody > p {
  margin-bottom: 0.5rem;
}

.contentBody > img {
  display: block;
  width: 100%;
}

.likesAndComments {
  display: grid;
  grid-template-columns: auto auto;
  justify-content: space-between;
}

.likesAndComments:not(:has(> *)) {
  display: none;
}

.likesAndComments > .commentsBtn {
  grid-column-start: 2;
  background-color: unset;
  border: none;
  color: var(--color-gray-400);
  font-size: 1rem;
}

.likesAndComments > .commentsBtn:hover {
  text-decoration: underline;
}

.contentActions {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.contentActions:not(:last-child) {
  margin-bottom: 1rem;
}

.contentActions > button {
  flex: 1;
  max-width: 250px;
  min-height: 40px;
  padding: 0 0.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  background-color: unset;
  border: none;
  border-radius: 4px;
  color: var(--color-gray-400);
  font-size: 1rem;
  font-weight: 500;
}

.contentActions > button:hover,
.contentActions > button:focus {
  background-color: var(--color-gray-200);
}

.postCommentFormContainer {
  margin-top: 1rem;
}

.postModalContainer {
  max-height: calc(85vh - 3rem);
  display: flex;
  flex-direction: column;
}

.postModalContainer > div {
  padding: 1.2rem;
}

.postModalContainer > div:first-child {
  overflow: scroll;
  flex: 1;
  padding-bottom: 0;
}

.postModalContainer > div:first-child > div {
  margin-bottom: 1rem;
}

.postModalContainer > div:last-child {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
}

.editModalFormContainer {
  padding: 1rem;
}

.errorsList {
  margin-bottom: 1rem;
  list-style: disc inside;
  text-align: left;
  color: var(--color-error);
}

.loadingContainer {
  margin-top: 1rem;
}

.loadingContainer > * {
  margin-left: auto;
}

.deleteModalContainer {
  text-align: center;
  padding: 1rem;
  color: var(--color-gray-700);
}

.deleteModalActionsContainer {
  display: flex;
  justify-content: right;
  gap: 1rem;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

.deleteModalActionsContainer > button {
  flex: 1;
  font-size: 0.9rem;
  font-weight: 700;
  max-width: 180px;
  padding: 0.8rem;
  border-radius: 10px;
  border: none;
}

.deleteModalActionsContainer > button:first-child {
  background-color: transparent;
  color: var(--color-primary-200);
}

.deleteModalActionsContainer > button:first-child:hover {
  background-color: var(--color-gray-200);
}

.deleteModalActionsContainer > button:last-child {
  background-color: var(--color-primary-200);
  color: #fff;
}

.deleteModalActionsContainer > button:last-child:hover {
  background-color: var(--color-primary-300);
}

.notificationsContainer {
  display: flex;
  justify-content: right;
  color: var(--color-error);
}

@media (min-width: 500px) {
  .dropdownContent {
    max-width: 250px;
  }
}

@media (min-width: 700px) {
  .primaryPostContainer {
    border-radius: 10px;
  }
}

